--- a/system2/src/TO_Medical.form
+++ b/system2/src/TO_Medical.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="TO_Medical">
-  <grid id="27dc6" binding="panal1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panal1" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,183 +8,160 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="6f1ee" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="6f1ee" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="bb79" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="10" left="10" bottom="10" right="10"/>
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-13922170"/>
-            </properties>
-            <border type="none"/>
-            <children>
-              <component id="7c86a" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
-                <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Logout"/>
-                </properties>
-              </component>
-              <component id="3a561" class="javax.swing.JButton" binding="attendenceButton" default-binding="true">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <hideActionText value="false"/>
-                  <text value="Attendence"/>
-                </properties>
-              </component>
-              <component id="8742c" class="javax.swing.JButton" binding="timetableButton" default-binding="true">
-                <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Timetable"/>
-                </properties>
-              </component>
-              <component id="8abd2" class="javax.swing.JButton" binding="noticeButton" default-binding="true">
-                <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Notice"/>
-                </properties>
-              </component>
-              <component id="8b4ee" class="javax.swing.JButton" binding="medicalButton" default-binding="true">
-                <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Medical"/>
-                </properties>
-              </component>
-              <component id="86608" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="image/attendence small.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="6dda" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="image/medical small.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="d06a" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="image/3.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="7cf28" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="image/5.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="b78b0" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="image/6.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="80a6b" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <font name="Arial Black" size="20" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Dashboard"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
-          <grid id="93d1b" binding="panal2" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="93d1b" binding="panal2" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="91ed8" class="javax.swing.JButton" binding="addButton">
+              <grid id="d3355" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <hideActionText value="false"/>
-                  <text value="Add"/>
-                </properties>
-              </component>
-              <component id="dbd43" class="javax.swing.JButton" binding="updateButton">
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="78024" class="javax.swing.JButton" binding="Back">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-13922170"/>
+                      <font name="Arial Black" size="14" style="1"/>
+                      <foreground color="-131073"/>
+                      <hideActionText value="false"/>
+                      <text value="Back"/>
+                    </properties>
+                  </component>
+                  <hspacer id="d9fe9">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </hspacer>
+                </children>
+              </grid>
+              <grid id="afd00" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <hideActionText value="false"/>
-                  <text value="Update"/>
-                </properties>
-              </component>
-              <component id="cfdef" class="javax.swing.JButton" binding="deleteButton">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <hideActionText value="false"/>
-                  <text value="Delete"/>
-                </properties>
-              </component>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="fbb8e" class="javax.swing.JButton" binding="addButton">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-13922170"/>
+                      <font name="Arial Black" size="14" style="1"/>
+                      <foreground color="-131073"/>
+                      <hideActionText value="false"/>
+                      <text value="Add"/>
+                    </properties>
+                  </component>
+                  <component id="6cdd7" class="javax.swing.JButton" binding="updateButton">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-13922170"/>
+                      <font name="Arial Black" size="14" style="1"/>
+                      <foreground color="-131073"/>
+                      <hideActionText value="false"/>
+                      <text value="Update"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
+        </children>
+      </grid>
+      <grid id="37387" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="10" left="10" bottom="10" right="10"/>
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-13922170"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="8f664" class="javax.swing.JLabel" binding="profilePicLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="4" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Arial Black" size="20" style="1"/>
+              <foreground color="-131073"/>
+              <icon value="image/user large.png"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="9196d" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+            <constraints>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13922170"/>
+              <font name="Arial Black" size="16" style="1"/>
+              <foreground color="-131073"/>
+              <horizontalAlignment value="2"/>
+              <text value="Logout"/>
+            </properties>
+          </component>
+          <component id="cf7d2" class="javax.swing.JButton" binding="editProfileButton" default-binding="true">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13922170"/>
+              <font name="Arial Black" size="16" style="1"/>
+              <foreground color="-131073"/>
+              <horizontalAlignment value="2"/>
+              <text value="Edit profile"/>
+            </properties>
+          </component>
+          <component id="ed632" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <icon value="image/2.png"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="203a5" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <icon value="image/6.png"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="eca79" class="javax.swing.JLabel" binding="adminUsernameLabel">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Arial Black" size="16" style="1"/>
+              <foreground color="-131073"/>
+              <text value=""/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
