--- a/system2/src/Todashboard.form
+++ b/system2/src/Todashboard.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="845" height="400"/>
+      <xy x="20" y="20" width="856" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -16,128 +16,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="fc1cf" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="10" left="10" bottom="10" right="10"/>
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-13922170"/>
-            </properties>
-            <border type="none"/>
-            <children>
-              <component id="799b5" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
-                <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Logout"/>
-                </properties>
-              </component>
-              <component id="14d5c" class="javax.swing.JButton" binding="attendenceButton" default-binding="true">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Attendence"/>
-                </properties>
-              </component>
-              <component id="d0bf7" class="javax.swing.JButton" binding="timetableButton" default-binding="true">
-                <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Timetable"/>
-                </properties>
-              </component>
-              <component id="3e70a" class="javax.swing.JButton" binding="noticeButton" default-binding="true">
-                <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Notice"/>
-                </properties>
-              </component>
-              <component id="a458f" class="javax.swing.JButton" binding="medicalButton" default-binding="true">
-                <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Medical"/>
-                </properties>
-              </component>
-              <component id="8a7da" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="image/attendence small.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="bbdac" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="image/medical small.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="de2b8" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="image/3.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="92435" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="image/5.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="9ea93" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="image/6.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="c816a" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <font name="Arial Black" size="20" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Dashboard"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
           <grid id="9507e" layout-manager="GridLayoutManager" row-count="3" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
@@ -163,7 +41,7 @@
                 </constraints>
                 <properties>
                   <font name="Arial Black" size="16" style="1"/>
-                  <text value="WELCOME, TECHNICAL OFFICER"/>
+                  <text value="TECHNICAL OFFICER"/>
                 </properties>
               </component>
               <component id="c54b6" class="javax.swing.JLabel">
@@ -241,6 +119,81 @@
                 </constraints>
                 <properties>
                   <icon value="image/2.png"/>
+                  <text value=""/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="f941f" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="10" left="10" bottom="10" right="10"/>
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13922170"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="5ef23" class="javax.swing.JLabel" binding="profilePicLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="4" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font name="Arial Black" size="20" style="1"/>
+                  <foreground color="-131073"/>
+                  <icon value="image/user large.png"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="fb00f" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+                <constraints>
+                  <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13922170"/>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
+                  <horizontalAlignment value="2"/>
+                  <text value="Logout"/>
+                </properties>
+              </component>
+              <component id="7be73" class="javax.swing.JButton" binding="editProfileButton" default-binding="true">
+                <constraints>
+                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13922170"/>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
+                  <horizontalAlignment value="2"/>
+                  <text value="Edit profile"/>
+                </properties>
+              </component>
+              <component id="bfe80" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <icon value="image/2.png"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="e0f6b" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <icon value="image/6.png"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="41375" class="javax.swing.JLabel" binding="adminUsernameLabel">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
                   <text value=""/>
                 </properties>
               </component>
